--- a/agenda/src/views/signup.ejs
+++ b/agenda/src/views/signup.ejs
@@ -29,7 +29,7 @@
                 <label for="password">Password</label>
                 <input type="password" name="password" class="form-control">
               </div>
-              <input type="submit" class="btn btn-dark btn-lg">
+              <input type="submit" class="btn btn-dark btn-lg" value="Crear cuenta">
             </form>
 
             <hr>
